# relay

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  sqlc.yaml
.claude/: settings.local.json
.claude/agents/: relay-backend-engineer.md  relay-code-reviewer.md  relay-frontend-engineer.md  relay-integration-tester.md  relay-planner.md  relay-tpm.md
.claude/workflows/: relay-verify.js
.github/workflows/: go-ci.yml  python.yml  release.yml
cmd/relay/: main.go
cmd/relay-agent/: free_disk_unix.go  free_disk_windows.go  main.go  main_test.go
cmd/relay-server/: bootstrap.go  bootstrap_test.go  main.go  startup_reconcile_test.go
design_handoff_relay_holo/: README.md  Relay Holo.html  hifi2-data.js  hifi2-holo.jsx  hifi2-shared.jsx  hifi3-holo-pages.jsx
design_handoff_relay_holo/reference/: Relay Wireframes.html  shell.js  styles.css
docs/agent-team/: README.md
docs/backlog/: bug-2026-04-25-deprecated-command-proto-field.md  bug-2026-04-25-down-migration-loses-multi-command.md  bug-2026-04-25-enrollment-token-hashing-inconsistency.md  (+143 more)
examples/: hello-unix.json  hello-windows.json  hello.json  multi-step-windows.json
python/: .gitignore  README.md  pyproject.toml
python/src/relay/: __init__.py  client.py  config.py  errors.py  events.py  models.py
python/tests/integration/: conftest.py  test_smoke.py
python/tests/unit/: test_client.py  test_config.py  test_errors.py  test_events.py  test_models.py
scripts/: dev.ps1
web/: .gitignore  embed.go  embed_test.go  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
(+857 files in other folders)
